@@ -27,6 +27,7 @@ solid-fuel-from-coal=Make solid fuel from coal, a wasteful process.
 foundry=__ITEM__foundry__
 electric-foundry=__ITEM__electric-foundry__
 advanced-founding=Advanced founding
+advanced-founding-space=Advanced founding of offworld materials
 
 [technology-description]
 foundry=Use heat for founding, coking, etc.
