@@ -4,6 +4,7 @@ Date: 2022-02-02
   Changes:
     - Refractory recipes: Remove "Imersium Plate" recipe - was not meant for endgame materials.
     - Refractory recipes: Add "rare-metals" recipes.
+    - Refractory recipes: Change Space Exploration ore refractory recipes to new tech.
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.10
 Date: 2022-01-31
